<resources>
    <string name="app_name">SwitchActivities</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="start_activity">Start Activity</string>
    <string name="start_activity_for_result">Start Activity for result</string>
    <string name="hint_username">enter user name</string>
    <string name="hint_useremail">enter user email</string>
    <string name="hint_url">enter website url</string>
    <string name="finish">finish</string>
    <string name="send_result">Send result OK</string>
</resources>
